--- a/output/folio/red-cantua.html
+++ b/output/folio/red-cantua.html
@@ -80,7 +80,7 @@ function greyon(img)
 	</div>
     </header>
     <center>
-      <p><img src="../static/images/red-cantua.jpg" alt="close up of Red Cantua flower" width=auto /></p>
+      <p><img src="../static/images/red-cantua.jpg" alt="close up of Red Cantua flower" width=1000px /></p>
     </center>
 
 
