fix(templates): add object-fit and flex display for index pages and typos

--- a/output/archives.html
+++ b/output/archives.html
@@ -40,6 +40,20 @@ function greyon(img)
 <h1>Archives for K Dublin Photography</h1>
 
 <dl>
+    <dt>Wed 12 January 2022</dt>
+    <dd><a href="./folio/waterfall-view.html">Waterfall View</a></dd>
+    <dt>Tue 11 January 2022</dt>
+    <dd><a href="./folio/tahoe-waterfall.html">Tahoe Waterfall</a></dd>
+    <dt>Mon 10 January 2022</dt>
+    <dd><a href="./folio/picture-in-picture.html">Picture in Picture</a></dd>
+    <dt>Sun 09 January 2022</dt>
+    <dd><a href="./folio/emerald-bay.html">Emerald Bay</a></dd>
+    <dt>Sat 08 January 2022</dt>
+    <dd><a href="./folio/mountain-thoughts.html">Mountain Thoughts</a></dd>
+    <dt>Fri 07 January 2022</dt>
+    <dd><a href="./folio/boots-tree.html">Boots in Tree</a></dd>
+    <dt>Thu 06 January 2022</dt>
+    <dd><a href="./folio/pretty-in-pink.html">Pretty in Pink</a></dd>
     <dt>Wed 05 January 2022</dt>
     <dd><a href="./folio/inflation-i.html">Inflation</a></dd>
     <dt>Tue 04 January 2022</dt>
