--- a/output/folio/inflation-i.html
+++ b/output/folio/inflation-i.html
@@ -68,6 +68,11 @@ function greyon(img)
 
 	<div style="clear:both"></div>
 
+	<div style="float:left">
+         <a  class= "prev" href="../folio/" id="prev">
+         &#10094; prev
+         </a>
+	</div>
 	<div style="float:right">
          <a class= "next" href="../folio/inflation-ii.html" id="next">
          next &#10095;
