--- a/output/index2.html
+++ b/output/index2.html
@@ -37,67 +37,67 @@ function greyon(img)
                 </ul></nav>
         </header><!-- /#banner -->
 
-    <aside id="featured" class="body">
+    <aside id="featured" class="body" style="display: flex; flex-wrap: wrap;">
 
 
-	<div style="float:left">
+	<div style="">
+		<a href="./folio/gg-love.html">
+		<img src="/static/images/gg-love.jpg" class="bw" id="ima1" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Golden Gate Love" alt="Beautiful Black couple shares tender moment at the Golden Gate Bridge Vista Point" style="height: 133px; object-fit: cover;" /></a>
+	</div>
+
+	<div style="">
+		<a href="./folio/gg-kiss.html">
+		<img src="/static/images/gg-kiss.jpg" class="bw" id="ima2" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Golden Gate Kiss" alt="" style="height: 133px; object-fit: cover;" /></a>
+	</div>
+
+	<div style="">
+		<a href="./folio/modern-cowboy.html">
+		<img src="/static/images/modern-cowboy.jpg" class="bw" id="ima3" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Modern Cowboy" alt="Modern Cowboy in Glen Canyon" style="height: 133px; object-fit: cover;" /></a>
+	</div>
+
+	<div style="">
+		<a href="./folio/sunset-cigarette.html">
+		<img src="/static/images/sunset-cigarette.jpg" class="bw" id="ima4" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Sunset Cigarette" alt="Modern Cowboy in Glen Canyon having a cigarette in Glen Canyon" style="height: 133px; object-fit: cover;" /></a>
+	</div>
+
+	<div style="">
+		<a href="./folio/teacher-headshot.html">
+		<img src="/static/images/teacher-headshot.jpg" class="bw" id="ima5" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Teacher Headshot" alt="Headshot of model in Glen Park neighborhood San Francisco" style="height: 133px; object-fit: cover;" /></a>
+	</div>
+
+	<div style="">
+		<a href="./folio/cute-pig.html">
+		<img src="/static/images/cute-pig.jpg" class="bw" id="ima6" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Cute Pig" alt="Model next to Food Truck in San Francisco" style="height: 133px; object-fit: cover;" /></a>
+	</div>
+
+	<div style="">
+		<a href="./folio/day-ahead.html">
+		<img src="/static/images/day-ahead.jpg" class="bw" id="ima7" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Day Ahead" alt="Model begins day in front of San Francisco Bay" style="height: 133px; object-fit: cover;" /></a>
+	</div>
+
+	<div style="">
 		<a href="./folio/first-shot.html">
-		<img src="/static/images/first-shot.jpg" class="bw" id="ima1" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="First Shot" alt="First Basketball Shot of Civil Twilight at McLaren Park" /></a>
+		<img src="/static/images/first-shot.jpg" class="bw" id="ima8" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="First Shot" alt="First Basketball Shot of Civil Twilight at McLaren Park" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
-	<div style="float:left">
+	<div style="">
 		<a href="./folio/shot-and-awe.html">
-		<img src="/static/images/shot-and-awe.jpg" class="bw" id="ima2" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Shot and Awe" alt="Three Points of Awe at McLaren Park" /></a>
+		<img src="/static/images/shot-and-awe.jpg" class="bw" id="ima9" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Shot and Awe" alt="Three Points of Awe at McLaren Park" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
-	<div style="float:left">
+	<div style="">
 		<a href="./folio/brick-friendship.html">
-		<img src="/static/images/brick-friendship.jpg" class="bw" id="ima3" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Brick Friendship" alt="photo of Friends in San Francisco South Beach in front of Brick wall" /></a>
+		<img src="/static/images/brick-friendship.jpg" class="bw" id="ima10" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Brick Friendship" alt="photo of Friends in San Francisco South Beach in front of Brick wall" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
-	<div style="float:left">
+	<div style="">
 		<a href="./folio/bay-friends.html">
-		<img src="/static/images/bay-friends.jpg" class="bw" id="ima4" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Bay Friends" alt="photo of Friends at San Francisco Embarcadero overlooking Bay Bridge" /></a>
+		<img src="/static/images/bay-friends.jpg" class="bw" id="ima11" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Bay Friends" alt="photo of Friends at San Francisco Embarcadero overlooking Bay Bridge" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
-	<div style="float:left">
+	<div style="">
 		<a href="./folio/birds-of-paradise.html">
-		<img src="/static/images/birds-of-paradise.jpg" class="bw" id="ima5" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Birds of Paradise" alt="Birds of Paradise at Salesforce Park" /></a>
-	</div>
-
-	<div style="float:left">
-		<a href="./folio/red-cantua.html">
-		<img src="/static/images/red-cantua.jpg" class="bw" id="ima6" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Red Cantua" alt="close up of Red Cantua flower" /></a>
-	</div>
-
-	<div style="float:left">
-		<a href="./folio/city-wish.html">
-		<img src="/static/images/city-wish.jpg" class="bw" id="ima7" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="City Wish" alt="City Wish near Mission Creek" /></a>
-	</div>
-
-	<div style="float:left">
-		<a href="./folio/pandemic-twilight.html">
-		<img src="/static/images/pandemic-twilight.jpg" class="bw" id="ima8" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Pandemic Twilight" alt="Model shares a laugh near Mission Bay" /></a>
-	</div>
-
-	<div style="float:left">
-		<a href="./folio/bay-contemplation.html">
-		<img src="/static/images/bay-contemplation.jpg" class="bw" id="ima9" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Bay Contemplation" alt="Model stares into the San Francisco Bay" /></a>
-	</div>
-
-	<div style="float:left">
-		<a href="./folio/candlestick-point.html">
-		<img src="/static/images/candlestick-point.jpg" class="bw" id="ima10" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Candlestick Point" alt="On the Shore of the Day at Candlestick Point" /></a>
-	</div>
-
-	<div style="float:left">
-		<a href="./folio/lone-tree.html">
-		<img src="/static/images/lone-tree.jpg" class="bw" id="ima11" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Lone Tree" alt="Lone tree amid a field" /></a>
-	</div>
-
-	<div style="float:left">
-		<a href="./folio/hiking-break.html">
-		<img src="/static/images/hiking-break.jpg" class="bw" id="ima12" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Hiking Break" alt="Model poses on bridge amid trail" /></a>
+		<img src="/static/images/birds-of-paradise.jpg" class="bw" id="ima12" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Birds of Paradise" alt="Birds of Paradise at Salesforce Park" style="height: 133px; object-fit: cover;" /></a>
 	</div>
                 </ol><!-- /#posts-list -->
                 <div style="clear:both"></div><p class="paginator">
