--- a/output/index3.html
+++ b/output/index3.html
@@ -37,17 +37,52 @@ function greyon(img)
                 </ul></nav>
         </header><!-- /#banner -->
 
-    <aside id="featured" class="body">
+    <aside id="featured" class="body" style="display: flex; flex-wrap: wrap;">
 
 
-	<div style="float:left">
-		<a href="./folio/arastradero-loop.html">
-		<img src="/static/images/arastradero-loop.jpg" class="bw" id="ima1" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Arastradero Loop" alt="Bay Area peninsula trail" /></a>
+	<div style="">
+		<a href="./folio/red-cantua.html">
+		<img src="/static/images/red-cantua.jpg" class="bw" id="ima1" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Red Cantua" alt="close up of Red Cantua flower" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
-	<div style="float:left">
+	<div style="">
+		<a href="./folio/city-wish.html">
+		<img src="/static/images/city-wish.jpg" class="bw" id="ima2" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="City Wish" alt="City Wish near Mission Creek" style="height: 133px; object-fit: cover;" /></a>
+	</div>
+
+	<div style="">
+		<a href="./folio/pandemic-twilight.html">
+		<img src="/static/images/pandemic-twilight.jpg" class="bw" id="ima3" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Pandemic Twilight" alt="Model shares a laugh near Mission Bay" style="height: 133px; object-fit: cover;" /></a>
+	</div>
+
+	<div style="">
+		<a href="./folio/bay-contemplation.html">
+		<img src="/static/images/bay-contemplation.jpg" class="bw" id="ima4" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Bay Contemplation" alt="Model stares into the San Francisco Bay" style="height: 133px; object-fit: cover;" /></a>
+	</div>
+
+	<div style="">
+		<a href="./folio/candlestick-point.html">
+		<img src="/static/images/candlestick-point.jpg" class="bw" id="ima5" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Candlestick Point" alt="On the Shore of the Day at Candlestick Point" style="height: 133px; object-fit: cover;" /></a>
+	</div>
+
+	<div style="">
+		<a href="./folio/lone-tree.html">
+		<img src="/static/images/lone-tree.jpg" class="bw" id="ima6" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Lone Tree" alt="Lone tree amid a field" style="height: 133px; object-fit: cover;" /></a>
+	</div>
+
+	<div style="">
+		<a href="./folio/hiking-break.html">
+		<img src="/static/images/hiking-break.jpg" class="bw" id="ima7" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Hiking Break" alt="Model poses on bridge amid trail" style="height: 133px; object-fit: cover;" /></a>
+	</div>
+
+	<div style="">
+		<a href="./folio/arastradero-loop.html">
+		<img src="/static/images/arastradero-loop.jpg" class="bw" id="ima8" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Arastradero Loop" alt="Bay Area peninsula trail" style="height: 133px; object-fit: cover;" /></a>
+	</div>
+
+	<div style="">
 		<a href="./folio/abstract-field.html">
-		<img src="/static/images/abstract-field.jpg" class="bw" id="ima2" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="The Yellow in Green" alt="The Yellow in Green" /></a>
+		<img src="/static/images/abstract-field.jpg" class="bw" id="ima9" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="The Yellow in Green" alt="The Yellow in Green" style="height: 133px; object-fit: cover;" /></a>
 	</div>
                 </ol><!-- /#posts-list -->
                 <div style="clear:both"></div><p class="paginator">
