cleanup(templates, first image): add new font, add poems to images

--- a/output/folio/bay-contemplation.html
+++ b/output/folio/bay-contemplation.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>Bay Contemplation</title>
         <link rel="stylesheet" href="../theme/css/main.css" />
+        <link rel="stylesheet" href="../static/css/custom.css" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -74,7 +75,7 @@ function greyon(img)
          </a>
 	</div>
 	<div style="float:right">
-         <a class= "next" href="../folio/candlestick-point.html" id="next">
+         <a class= "next" href="../folio/love-in-step.html" id="next">
          next &#10095;
          </a>
 	</div>
