--- a/output/folio/candlestick-point.html
+++ b/output/folio/candlestick-point.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>Candlestick Point</title>
         <link rel="stylesheet" href="../theme/css/main.css" />
+        <link rel="stylesheet" href="../static/css/custom.css" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -69,7 +70,7 @@ function greyon(img)
 	<div style="clear:both"></div>
 
 	<div style="float:left">
-         <a  class= "prev" href="../folio/bay-contemplation.html" id="prev">
+         <a  class= "prev" href="../folio/love-in-step.html" id="prev">
          &#10094; prev
          </a>
 	</div>
