--- a/output/folio/waterfall-view.html
+++ b/output/folio/waterfall-view.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>Waterfall View</title>
         <link rel="stylesheet" href="../theme/css/main.css" />
+        <link rel="stylesheet" href="../static/css/custom.css" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -76,6 +77,9 @@ function greyon(img)
     </header>
     <center>
       <p><img src="../static/images/waterfall-view.jpg" alt="Waterfall that flows each spring" width=1000px /></p>
+<p class="poem">Winter’s end drifting <br/>
+over rocks like frogs’ song<br/>
+to glorious view</p>
     </center>
 
 
