--- a/output/archives.html
+++ b/output/archives.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>K Dublin Photography</title>
         <link rel="stylesheet" href="./theme/css/main.css" />
+        <link rel="stylesheet" href="./static/css/custom.css" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -96,6 +97,8 @@ function greyon(img)
     <dd><a href="./folio/pandemic-twilight.html">Pandemic Twilight</a></dd>
     <dt>Thu 16 December 2021</dt>
     <dd><a href="./folio/bay-contemplation.html">Bay Contemplation</a></dd>
+    <dt>Thu 16 December 2021</dt>
+    <dd><a href="./folio/love-in-step.html">Love in Step</a></dd>
     <dt>Wed 15 December 2021</dt>
     <dd><a href="./folio/candlestick-point.html">Candlestick Point</a></dd>
     <dt>Tue 14 December 2021</dt>
