--- a/output/authors.html
+++ b/output/authors.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>K Dublin Photography - Authors</title>
         <link rel="stylesheet" href="./theme/css/main.css" />
+        <link rel="stylesheet" href="./static/css/custom.css" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -40,7 +41,7 @@ function greyon(img)
 <section id="content" class="body">
     <h1>Authors on K Dublin Photography</h1>
     <ul>
-        <li><a href="./author/k-dublin.html">K Dublin</a> (33)</li>
+        <li><a href="./author/k-dublin.html">K Dublin</a> (34)</li>
     </ul>
 </section>
 
