--- a/output/categories.html
+++ b/output/categories.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>K Dublin Photography - Categories</title>
         <link rel="stylesheet" href="./theme/css/main.css" />
+        <link rel="stylesheet" href="./static/css/custom.css" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -40,7 +41,7 @@ function greyon(img)
     <ul>
         <li><a href="./folio/category/inflation.html">Inflation</a> (4)</li>
         <li><a href="./folio/category/landscape.html">Landscape</a> (1)</li>
-        <li><a href="./folio/category/lifestyle.html">Lifestyle</a> (8)</li>
+        <li><a href="./folio/category/lifestyle.html">Lifestyle</a> (9)</li>
         <li><a href="./folio/category/nature.html">Nature</a> (12)</li>
         <li><a href="./folio/category/portrait.html">Portrait</a> (8)</li>
     </ul>
