--- a/output/folio/boots-tree.html
+++ b/output/folio/boots-tree.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>Boots in Tree</title>
         <link rel="stylesheet" href="../theme/css/main.css" />
+        <link rel="stylesheet" href="../static/css/custom.css" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
