--- a/output/index3.html
+++ b/output/index3.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>K Dublin Photography</title>
         <link rel="stylesheet" href="./theme/css/main.css" />
+        <link rel="stylesheet" href="./static/css/custom.css" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -61,28 +62,33 @@ function greyon(img)
 	</div>
 
 	<div style="">
+		<a href="./folio/love-in-step.html">
+		<img src="/static/images/love-in-step.jpg" class="bw" id="ima5" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Love in Step" alt="Couple walks their dog in perfect step" style="height: 133px; object-fit: cover;" /></a>
+	</div>
+
+	<div style="">
 		<a href="./folio/candlestick-point.html">
-		<img src="/static/images/candlestick-point.jpg" class="bw" id="ima5" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Candlestick Point" alt="On the Shore of the Day at Candlestick Point" style="height: 133px; object-fit: cover;" /></a>
+		<img src="/static/images/candlestick-point.jpg" class="bw" id="ima6" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Candlestick Point" alt="On the Shore of the Day at Candlestick Point" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
 		<a href="./folio/lone-tree.html">
-		<img src="/static/images/lone-tree.jpg" class="bw" id="ima6" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Lone Tree" alt="Lone tree amid a field" style="height: 133px; object-fit: cover;" /></a>
+		<img src="/static/images/lone-tree.jpg" class="bw" id="ima7" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Lone Tree" alt="Lone tree amid a field" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
 		<a href="./folio/hiking-break.html">
-		<img src="/static/images/hiking-break.jpg" class="bw" id="ima7" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Hiking Break" alt="Model poses on bridge amid trail" style="height: 133px; object-fit: cover;" /></a>
+		<img src="/static/images/hiking-break.jpg" class="bw" id="ima8" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Hiking Break" alt="Model poses on bridge amid trail" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
 		<a href="./folio/arastradero-loop.html">
-		<img src="/static/images/arastradero-loop.jpg" class="bw" id="ima8" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Arastradero Loop" alt="Bay Area peninsula trail" style="height: 133px; object-fit: cover;" /></a>
+		<img src="/static/images/arastradero-loop.jpg" class="bw" id="ima9" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Arastradero Loop" alt="Bay Area peninsula trail" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
 		<a href="./folio/abstract-field.html">
-		<img src="/static/images/abstract-field.jpg" class="bw" id="ima9" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="The Yellow in Green" alt="The Yellow in Green" style="height: 133px; object-fit: cover;" /></a>
+		<img src="/static/images/abstract-field.jpg" class="bw" id="ima10" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="The Yellow in Green" alt="The Yellow in Green" style="height: 133px; object-fit: cover;" /></a>
 	</div>
                 </ol><!-- /#posts-list -->
                 <div style="clear:both"></div><p class="paginator">
