--- a/output/archives.html
+++ b/output/archives.html
@@ -52,7 +52,7 @@ function greyon(img)
     <dt>Sat 08 January 2022</dt>
     <dd><a href="./folio/mountain-thoughts.html">Mountain Thoughts</a></dd>
     <dt>Fri 07 January 2022</dt>
-    <dd><a href="./folio/boots-tree.html">Boots in Tree</a></dd>
+    <dd><a href="./folio/boots-tree.html">In Memoriam</a></dd>
     <dt>Thu 06 January 2022</dt>
     <dd><a href="./folio/pretty-in-pink.html">Pretty in Pink</a></dd>
     <dt>Wed 05 January 2022</dt>
