--- a/output/folio/emerald-bay.html
+++ b/output/folio/emerald-bay.html
@@ -62,7 +62,7 @@ function greyon(img)
 		      </h1>
 		</div>
 		<div style="float:right"><h2>        <abbr class="published" title="Landscape of Emerald Bay">
-                Emerald Bay State Park, CA
+                Emerald Bay Lake Tahoe, CA
         </abbr>
         </h2></div>
 	</div>
@@ -82,6 +82,9 @@ function greyon(img)
     </header>
     <center>
       <p><img src="../static/images/emerald-bay.jpg" alt="Landscape of Emerald Bay" width=1000px /></p>
+<p class="poem">Dozens of summers<br/>
+another in a month—<br/>
+dark plum colored dusk</p>
     </center>
 
 
