--- a/output/folio/inflation-i.html
+++ b/output/folio/inflation-i.html
@@ -70,7 +70,7 @@ function greyon(img)
 	<div style="clear:both"></div>
 
 	<div style="float:left">
-         <a  class= "prev" href="../folio/" id="prev">
+         <a  class= "prev" href="../folio/pretty-in-pink.html" id="prev">
          &#10094; prev
          </a>
 	</div>
