--- a/output/folio/love-in-step.html
+++ b/output/folio/love-in-step.html
@@ -81,7 +81,7 @@ function greyon(img)
 	</div>
     </header>
     <center>
-      <p><img src="../static/images/love-in-step.jpg" alt="Couple walks their dog in perfect step" width=1000 /></p>
+      <p><img src="../static/images/love-in-step.jpg" alt="Couple walks their dog in perfect step" width=auto /></p>
     </center>
 
 
