--- a/output/folio/mountain-thoughts.html
+++ b/output/folio/mountain-thoughts.html
@@ -62,7 +62,7 @@ function greyon(img)
 		      </h1>
 		</div>
 		<div style="float:right"><h2>        <abbr class="published" title="Model contemplates beauty between water">
-                Emerald Bay State Park, CA
+                Emerald Bay Lake Tahoe, CA
         </abbr>
         </h2></div>
 	</div>
@@ -82,6 +82,9 @@ function greyon(img)
     </header>
     <center>
       <p><img src="../static/images/mountain-thoughts.jpg" alt="Model contemplates beauty between water" width=1000px /></p>
+<p class="poem">Pine wafts on the wind<br/>
+an eight year old killed today—<br/>
+bark rustles like leaves</p>
     </center>
 
 
