--- a/output/folio/picture-in-picture.html
+++ b/output/folio/picture-in-picture.html
@@ -62,7 +62,7 @@ function greyon(img)
 		      </h1>
 		</div>
 		<div style="float:right"><h2>        <abbr class="published" title="Landscape of Emerald Bay">
-                Emerald Bay State Park, CA
+                Eagle Falls Lake Tahoe, CA
         </abbr>
         </h2></div>
 	</div>
@@ -82,6 +82,9 @@ function greyon(img)
     </header>
     <center>
       <p><img src="../static/images/picture-in-picture.jpg" alt="Photo of young firls taking picture of picture" width=1000px /></p>
+<p class="poem">Impossible height!<br/>
+attempt to capture it all—<br/>
+cloud wisps in branches</p>
     </center>
 
 
