--- a/output/folio/pretty-in-pink.html
+++ b/output/folio/pretty-in-pink.html
@@ -62,7 +62,7 @@ function greyon(img)
 		      </h1>
 		</div>
 		<div style="float:right"><h2>        <abbr class="published" title="Model chews on grass in her pink boots">
-                Donner Pass Vista, CA
+                Donner Pass, CA
         </abbr>
         </h2></div>
 	</div>
@@ -81,7 +81,10 @@ function greyon(img)
 	</div>
     </header>
     <center>
-      <p><img src="../static/images/pretty-in-pink.jpg" alt="Model chews on grass in her pink boots" width=1000px /></p>
+      <p><img src="../static/images/pretty-in-pink.jpg" alt="Model chews on grass in her pink boots" width=auto /></p>
+<p class="poem">Sierra primrose:<br/>
+pink and early, eager bloom—<br/>
+my heart as you’re amused</p>
     </center>
 
 
