--- a/output/folio/waterfall-view.html
+++ b/output/folio/waterfall-view.html
@@ -62,7 +62,7 @@ function greyon(img)
 		      </h1>
 		</div>
 		<div style="float:right"><h2>        <abbr class="published" title="View of Emerald Bay from the waterfall">
-                Emerald Bay State Park, CA
+                Eagle Falls Lake Tahoe, CA
         </abbr>
         </h2></div>
 	</div>
@@ -78,7 +78,7 @@ function greyon(img)
     <center>
       <p><img src="../static/images/waterfall-view.jpg" alt="Waterfall that flows each spring" width=1000px /></p>
 <p class="poem">Winter’s end drifting <br/>
-over rocks like frogs’ song<br/>
+over rocks like frog’s song<br/>
 to glorious view</p>
     </center>
 
