--- a/output/index.html
+++ b/output/index.html
@@ -68,7 +68,7 @@ function greyon(img)
 
 	<div style="">
 		<a href="./folio/boots-tree.html">
-		<img src="/static/images/boots-tree.jpg" class="bw" id="ima6" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Boots in Tree" alt="Timberlands left hanging in a tree" style="height: 133px; object-fit: cover;" /></a>
+		<img src="/static/images/boots-tree.jpg" class="bw" id="ima6" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="In Memoriam" alt="Timberlands left hanging in a tree" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
