--- a/output/folio/gg-city.html
+++ b/output/folio/gg-city.html
@@ -69,6 +69,11 @@ function greyon(img)
 
 	<div style="clear:both"></div>
 
+	<div style="float:left">
+         <a  class= "prev" href="../folio/inflation-iv.html" id="prev">
+         &#10094; prev
+         </a>
+	</div>
 	<div style="float:right">
          <a class= "next" href="../folio/gg-love.html" id="next">
          next &#10095;
