--- a/output/folio/tahoe-waterfall.html
+++ b/output/folio/tahoe-waterfall.html
@@ -62,7 +62,7 @@ function greyon(img)
 		      </h1>
 		</div>
 		<div style="float:right"><h2>        <abbr class="published" title="Waterfall that flows each spring">
-                Emerald Bay State Park, CA
+                Eagle Falls Lake Tahoe, CA
         </abbr>
         </h2></div>
 	</div>
@@ -82,6 +82,9 @@ function greyon(img)
     </header>
     <center>
       <p><img src="../static/images/tahoe-waterfall.jpg" alt="Waterfall that flows each spring" width=1000px /></p>
+<p class="poem">Pause— the rush of spring<br/>
+trees naked on mountainside—<br/>
+wait and stay awhile</p>
     </center>
 
 
