--- a/output/folio/adrienne-oliver.html
+++ b/output/folio/adrienne-oliver.html
@@ -71,7 +71,7 @@ function greyon(img)
 	<div style="clear:both"></div>
 
 	<div style="float:right">
-         <a class= "next" href="../folio/waterfall-view.html" id="next">
+         <a class= "next" href="../folio/adrienne-oliver-2.html" id="next">
          next &#10095;
          </a>
 	</div>
